--- a/templates/admin/anonymizer/post/change_form.html
+++ b/templates/admin/anonymizer/post/change_form.html
@@ -1,8 +1,10 @@
 {% extends 'admin/change_form.html' %}
-
-{% block submit_buttons_bottom %}
+{% if thispost.id %}
+    {% block submit_buttons_bottom %}
     {{ block.super }}
     <div class="submit-row">
             <input type="submit" value="Generate Values" name="_generate_values">
     </div>
 {% endblock %}
+{% endif %}
+
