--- a/templates/admin/anonymizer/post/change_form.html
+++ b/templates/admin/anonymizer/post/change_form.html
@@ -1,10 +1,11 @@
 {% extends 'admin/change_form.html' %}
-{% if thispost.id %}
+{% load i18n %}
+{% if self.obj != None %}
     {% block submit_buttons_bottom %}
     {{ block.super }}
     <div class="submit-row">
-            <input type="submit" value="Generate Values" name="_generate_values">
+            <input type="submit" value="Generate values" name="_generate_values">
     </div>
-{% endblock %}
+    {% endblock %}
 {% endif %}
 
